# Context-Relay

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  deny.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  (+4 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
crates/context-mcp/: Cargo.toml
crates/context-mcp/src/: main.rs
crates/context-mcp/tests/: stdout_v1.rs
crates/contextd/: Cargo.toml
crates/contextd/src/: lib.rs  main.rs
crates/contextd/tests/: daemon_v1.rs
crates/core/: Cargo.toml
crates/core/migrations/: 0001_vault.sql  0002_before_image_plans.sql  0003_native_transactions.sql
crates/core/models/bge-small-en-v1.5/: manifest.json
crates/core/src/: crypto.rs  lib.rs  search.rs  vault.rs
crates/core/src/native_transaction/: approval.rs  engine.rs  filesystem.rs  journal.rs  mod.rs  model.rs  recovery.rs
crates/core/src/vault/: native_transactions.rs
crates/core/tests/: crypto_v1.rs  model_input_v1.rs  native_approval_v1.rs  native_filesystem_macos_v1.rs  native_filesystem_windows_v1.rs  native_journal_v1.rs  native_recovery_crash_v1.rs  native_recovery_v1.rs  native_transaction_v1.rs  search_v1.rs  vault_storage_v1.rs  vault_v1.rs
crates/core/tests/fixtures/: crypto-v1.txt
crates/core/tests/support/: mod.rs
crates/local-ipc/: Cargo.toml
crates/local-ipc/src/: auth.rs  connection.rs  frame.rs  handshake_tests.rs  lib.rs  transport.rs
crates/local-ipc/tests/: ipc_v1.rs
crates/native-runner/: Cargo.toml
crates/native-runner/resources/macos/: Info.plist
crates/native-runner/src/: command.rs  environment.rs  helper_protocol.rs  hydration.rs  launcher.rs  lib.rs  macos_identity.rs  macos_spawn.rs  manifest.rs  path_policy.rs  report_validation.rs  stage.rs
crates/native-runner/src/hydration/: macos.rs  windows.rs
crates/native-runner/src/launcher/macos/: mod.rs  model.rs  native.rs  policy.rs
crates/native-runner/src/launcher/windows/: drain.rs  layout.rs  mod.rs  model.rs  native.rs  profile.rs  sequence.rs
crates/native-runner/src/native_fs/: macos.rs  mod.rs  windows.rs
crates/native-runner/tests/: candidate_manifest_v1.rs  helper_protocol_v1.rs  hydration_installer_v1.rs  hydration_windows_v1.rs  macos_launcher_v1.rs  manifest_v1.rs  native_fs_macos_v1.rs  native_fs_windows_v1.rs  native_helper_v1.rs  output_enumeration_macos_v1.rs  output_enumeration_windows_v1.rs  portable_policy_v1.rs  real_sidecars_windows_v1.rs  sidecar_report_v1.rs  windows_launcher_v1.rs
crates/native-runner/tests/macos-launcher-harness/: Cargo.toml
crates/native-runner/tests/macos-launcher-harness/src/: lib.rs
crates/native-runner/tests/macos-launcher-harness/tests/: adapter_native.rs  guardian_native.rs  native.rs  policy.rs
crates/native-runner/tests/windows-launcher-harness/: Cargo.toml
crates/native-runner/tests/windows-launcher-harness/src/: lib.rs
crates/native-runner/tests/windows-launcher-harness/tests/: adapter_native.rs  helper_native.rs  launch_native.rs  policy.rs  profile_native.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: adapters.rs  canonical_cbor.rs  clock.rs  digests.rs  domain.rs  error.rs  ids.rs  ipc.rs  lib.rs  mcp.rs  packages.rs  sync.rs  validation.rs
crates/protocol/tests/: adapter_bounds_v1.rs  canonical_cbor_allocation_v1.rs  contracts_v1.rs  invalid_uuid_version_v1.rs  ipc_adapter_package_v1.rs  legacy_invalid_cbor_fixture_v1.rs  mcp_output_roundtrip_v1.rs  mcp_schema_parity_v1.rs  mcp_scope_v1.rs  mcp_v1.rs  nullability_path_v1.rs  package_bounds_v1.rs  package_serialization_allocations_v1.rs  packages_v1.rs  pairing_v1.rs  protocol_v1.rs  setup_plan_v1.rs  sync_cbor_v1.rs  task4_parity_v1.rs
crates/protocol/tests/fixtures/: checkpoint-signing-preimage-v1.hex  checkpoint-v1.hex  export-v1-invalid.json  export-v1-valid.json  invalid-cbor-corpus-v1.json  invalid-cbor-v1.hex  invalid-uuid-version-v1.hex  mcp-invalid.json  mcp-output-invalid.json  mcp-output-valid.json  mcp-valid.json  package-v1-invalid.json  package-v1-valid.json  runtime-contracts-v1.json  sync-operation-signing-preimage-v1.hex  sync-operation-v1.hex
crates/protocol/tests/support/: mod.rs
docs/: repository-settings.md
schemas/: context-relay-export-v1.json  context-relay-package-v1.json  context_relay_archive_memory-input-v1.json  context_relay_archive_memory-output-v1.json  context_relay_complete_task-input-v1.json  context_relay_complete_task-output-v1.json  context_relay_create_handoff-input-v1.json  context_relay_create_handoff-output-v1.json  context_relay_get-input-v1.json  context_relay_get-output-v1.json  context_relay_list_tasks-input-v1.json  context_relay_list_tasks-output-v1.json  context_relay_propose_memory-input-v1.json  context_relay_propose_memory-output-v1.json  context_relay_remember-input-v1.json  context_relay_search-input-v1.json  context_relay_search-output-v1.json  context_relay_status-input-v1.json  context_relay_status-output-v1.json  context_relay_update_memory-input-v1.json  context_relay_update_memory-output-v1.json  context_relay_upsert_task-input-v1.json  context_relay_upsert_task-output-v1.json
scripts/: apply-semgrep-source-patches.mjs  apply-semgrep-source-patches.test.mjs  assert-cygwin-release.mjs  check-bindings.mjs  check-daemon-boundary.mjs  check-daemon-boundary.test.mjs  check-license-metadata.mjs  check-license-metadata.test.mjs  check-schemas.mjs  finalize-semgrep-native-release.mjs  finalize-semgrep-native-release.test.mjs  hydrate-sidecars.mjs  hydrate-sidecars.test.mjs  native-ci-workflow.test.mjs  native-smoke-evidence.mjs  native-smoke-evidence.test.mjs  prepare-semgrep-runtime.mjs  prepare-semgrep-runtime.test.mjs  reseal-semgrep-source-bundle.mjs  reseal-semgrep-source-bundle.test.mjs  semgrep-source-bundle.mjs  semgrep-source-bundle.test.mjs  semgrep-source-inventory.mjs  semgrep-source-inventory.test.mjs  tauri-assets.test.mjs  verify-native-builder-identities.mjs
(+21 files in other folders)
