[workspace]
members = [
  "crates/protocol",
  "crates/core",
  "crates/contextd",
  "crates/context-mcp",
  "apps/desktop/src-tauri",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/Skytuhua/Context-Relay"
rust-version = "1.97"

[workspace.dependencies]
base64 = "0.22.1"
bip39 = { version = "2.2.0", features = ["zeroize"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
ed25519-dalek = { version = "2.2.0", features = ["zeroize"] }
hkdf = "0.12.4"
minicbor = { version = "0.26.5", features = ["std"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.16"
ts-rs = { version = "11.1.0", features = ["serde-compat", "no-serde-warnings"] }
uuid = { version = "1.18.1", features = ["serde", "std", "v7"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
zeroize = "1.8.2"
