[package]
name = "context-relay-context-mcp"
description = "Context Relay MCP shell"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
context-relay-protocol = { version = "0.1.0", path = "../protocol" }
