[package]
name = "context-relay-contextd"
description = "Context Relay local daemon shell"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
context-relay-core = { version = "0.1.0", path = "../core" }
context-relay-local-ipc = { version = "0.1.0", path = "../local-ipc" }
context-relay-native-runner = { version = "0.1.0", path = "../native-runner" }
context-relay-protocol = { version = "0.1.0", path = "../protocol" }
dirs.workspace = true
keyring.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util"] }
uuid.workspace = true
zeroize.workspace = true
