[package]
name = "context-relay-local-ipc"
description = "Authenticated local IPC for Context Relay"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
context-relay-protocol = { version = "0.1.0", path = "../protocol" }
dirs.workspace = true
hmac.workspace = true
keyring.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Threading",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
