[package]
name = "context-relay-protocol"
description = "Shared Context Relay protocol types"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
minicbor.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
uuid.workspace = true
