[package]
name = "context-relay-desktop"
description = "Context Relay desktop shell"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
context-relay-protocol = { version = "0.1.0", path = "../../../crates/protocol" }
serde.workspace = true
tauri = { version = "2.8.5", features = [] }
