[package]
name = "context-relay-windows-launcher-harness"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
context-relay-native-runner = { path = "../.." }
serde_json = "1.0.145"
sha2 = "0.10.9"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Security_Isolation",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_System_JobObjects",
  "Win32_System_Memory",
  "Win32_System_Pipes",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
] }
